# AudioAnalyser

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md
.githooks/: pre-commit
.github/workflows/: tests.yml
docs/: AUDIO_ANALYSIS.md  AUDIO_FILES.md  FFT.md  FOURIER_TRANSFORM.md
src/: main.cpp
src/core/AudioAnalyser/: AudioAnalyser.cpp  AudioAnalyser.hpp  AudioAnalysis.cpp  AudioAnalysis.hpp
src/gui/MainView/: MainView.cpp  MainView.hpp
src/gui/MainWindow/: MainWindow.cpp  MainWindow.hpp
src/gui/widgets/FileManagmentWidget/: FileManagmentWidget.cpp  FileManagmentWidget.hpp
src/gui/widgets/FrequencyComponentsWidget/: FrequencyComponentsWidget.cpp  FrequencyComponentsWidget.hpp
src/gui/widgets/IndividualFrequency/: IndividualFrequency.cpp
src/gui/widgets/MainWidget/: MainWidget.cpp  MainWidget.hpp
src/gui/widgets/OverviewWidget/: OverviewWidget.cpp  OverviewWidget.hpp
src/gui/widgets/SpectrumChartWidget/: SpectrumChartWidget.cpp  SpectrumChartWidget.hpp
src/gui/widgets/WaveFormChartWidget/: WaveFormChartWidget.cpp  WaveFormChartWidget.hpp
src/utils/AudioUtils/: AudioUtils.cpp  AudioUtils.hpp
tests/benchmarks/: DFTBenchmark.cpp  FFTBenchmark.cpp
tests/benchmarks/BenchmarkUtils/: BenchmarkUtils.cpp  BenchmarkUtils.hpp
tests/unit_tests/: AudioAnalyserTest.cpp  AudioUtilsTest.cpp
